# RXDSEC-CLI

./: AGENTS.yaml  README.MD  README.md  pyproject.toml  requirements.txt  run.py
agents/: security-agent.yaml
rxdsec/: __init__.py  __main__.py
rxdsec.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
rxdsec/agent/: __init__.py  core.py  memory.py  planner.py  session.py  subagents.py
rxdsec/cli/: __init__.py  lpe.py  main.py  quest.py  review.py  tui.py  worktree.py
rxdsec/extensions/: __init__.py  manager.py
rxdsec/hooks/: __init__.py  runner.py
rxdsec/output/: __init__.py  highlighter.py  narrator.py  renderer.py  visual.py
rxdsec/output/formats/: __init__.py  code.py  diff.py  plan.py  summary.py  table.py
rxdsec/permissions/: __init__.py  engine.py
rxdsec/prompts/: __init__.py
rxdsec/tools/: __init__.py  base.py  grep.py  localexec.py  read.py  todo.py  web.py  write.py
rxdsec/utils/: __init__.py  git.py  logger.py  spinner.py
